Fix spacing issues in css with navbar brand

--- a/template/css/style.css
+++ b/template/css/style.css
@@ -27,8 +27,10 @@
   .brand-style{
     font-family: 'LobsterTwo' !important;
     font-weight: 500;
-    font-size: 1.5rem;
+    font-size: 2.0rem;
     color:#fff !important;
+    padding:0px;
+    margin:0 20px 0 0;
     text-shadow: 1px 1px 1px rgb(255, 255, 255);
   }
 
